--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
         <div class="account-page">
             <div class="account-center">
                 <div class="account-box">
-                    <form action="http://dreamguys.co.in/preclinic/template/index-2.html" class="form-signin">
+                    <form action="index-2.html" class="form-signin">
                         <div class="account-logo">
                             <a href="index.html"><img src="assets/img/logo-dark.png" alt=""></a>
                         </div>
